src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Sub_Category__c</fullName>
        <label>Case Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3PL Complaint</fullName>
                </value>
                <value>
                    <fullName>ACH/EFT</fullName>
                </value>
                <value>
                    <fullName>Affidavit</fullName>
                </value>
                <value>
                    <fullName>Asset Lookup</fullName>
                </value>
                <value>
                    <fullName>Bid Package Prep/Signatures</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t find out how to order quick ship</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach Applications</fullName>
                </value>
                <value>
                    <fullName>Cannot Reach TRC</fullName>
                </value>
                <value>
                    <fullName>Cert of Ins.</fullName>
                </value>
                <value>
                    <fullName>Change &quot;Purchaser&quot; to &quot;Daikin as Purchaser&quot;</fullName>
                </value>
                <value>
                    <fullName>Chiller Operating Limitations</fullName>
                </value>
                <value>
                    <fullName>COI - Rep</fullName>
                </value>
                <value>
                    <fullName>COI - Service</fullName>
                </value>
                <value>
                    <fullName>Competitive Analysis</fullName>
                </value>
                <value>
                    <fullName>Complaints on Reservation Process</fullName>
                </value>
                <value>
                    <fullName>Connect for Office</fullName>
                </value>
                <value>
                    <fullName>Contact Lookup</fullName>
                </value>
                <value>
                    <fullName>Contact on order not contacted</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>Credentials</fullName>
                </value>
                <value>
                    <fullName>CRN</fullName>
                </value>
                <value>
                    <fullName>Daikin as Purchaser</fullName>
                </value>
                <value>
                    <fullName>DaikinTools/catalogs too hard to use</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delivered to Wrong Address</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t like change/cancel policy</fullName>
                </value>
                <value>
                    <fullName>Drawing request</fullName>
                </value>
                <value>
                    <fullName>Driver/Vehicle Info</fullName>
                </value>
                <value>
                    <fullName>DST Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty approved and paid</fullName>
                </value>
                <value>
                    <fullName>Customer did not reply within 14 days</fullName>
                </value>
                <value>
                    <fullName>Missing information</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <label>Rejected/Denied</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Division__c</fullName>
        <description>Company Division</description>
        <inlineHelpText>Company Division</inlineHelpText>
        <label>Company Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Applications Engineers</fullName>
                </value>
                <value>
                    <fullName>Consulting Sales</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Office</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>Owner Sales</fullName>
                </value>
                <value>
                    <fullName>RemedyForce</fullName>
                </value>
                <value>
                    <fullName>TRC</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concessions_Approved_Ttl__c</fullName>
        <description>Warranty</description>
        <inlineHelpText>This is the Warranty Total Requested portion of the claim.</inlineHelpText>
        <label>Concessions Approved Ttl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concessions_Requested_Ttl__c</fullName>
        <description>Warranty</description>
        <inlineHelpText>This is the Concessions Total Requested portion of the claim.</inlineHelpText>
        <label>Concessions Requested Ttl</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <formula>Contact.Account.Name</formula>
        <label>Contact Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Contact Email is for the purpose of displaying this information in Email Templates using merge fields.</description>
        <formula>Contact.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <description>Contact Mobile # is for the purpose of using this information in Email Templates as a merge field.</description>
        <formula>Contact.MobilePhone</formula>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Contact Phone # for the purpose of supplying this information in Email Templates as a merge field.</description>
        <formula>Contact.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type_Rep_Help_Desk__c</fullName>
        <description>This is the Contact Type that would normally call or email into the Rep help Desk.</description>
        <label>Contact Type- Rep Help Desk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Daikin Corporate</fullName>
                </value>
                <value>
                    <fullName>Daikin Service</fullName>
                </value>
                <value>
                    <fullName>Daikin Parts Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Used to pull the contact type to the case record so the support agent knows the type of contact they are working with. (McQuay Factory Tech, Independent Rep, Distributor)</description>
        <formula>TEXT( Contact.Type__c )</formula>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_at_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact that is helping assist with the Vendor Recovery</inlineHelpText>
        <label>Contact (at Vendor)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controller_Type_Display__c</fullName>
        <description>Shortens the Controller Type field by replacing MicroTech with MTI</description>
        <formula>IF(
    CONTAINS(TEXT(Controller_Type__c), &quot;MicroTech&quot;),
    SUBSTITUTE(TEXT(Controller_Type__c), &quot;MicroTech&quot;, &quot;MTI&quot;),
    TEXT(Controller_Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shortens the Controller Type field by replacing MicroTech with MTI</inlineHelpText>
        <label>Controller Type Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Type__c</fullName>
        <description>Controller Types need to be able to be entered regardless of if a case asset has been added or not.  
If the Controller Types get updated they need to be updated on Solutions too.</description>
        <label>Controller Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACnet thermostat</fullName>
                </value>
                <value>
                    <fullName>Intelligent Equipment</fullName>
                </value>
                <value>
                    <fullName>Intelligent Systems</fullName>
                </value>
                <value>
                    <fullName>iTouch/D3 Integration</fullName>
                </value>
                <value>
                    <fullName>Maverick 1</fullName>
                </value>
                <value>
                    <fullName>MicroTech 1</fullName>
                </value>
                <value>
                    <fullName>MicroTech 2000 WSHP</fullName>
                </value>
                <value>
                    <fullName>Microtech for UV</fullName>
                </value>
                <value>
                    <fullName>MicroTech II AAHU</fullName>
                </value>
                <value>
                    <fullName>MicroTech II chiller</fullName>
                </value>
                <value>
                    <fullName>MicroTech III AAHU</fullName>
                </value>
                <value>
                    <fullName>MicroTech III chiller</fullName>
                </value>
                <value>
                    <fullName>MicroTech III Fan Coil</fullName>
                </value>
                <value>
                    <fullName>MicroTech III WSHP</fullName>
                </value>
                <value>
                    <fullName>MicroTech II Mav II</fullName>
                </value>
                <value>
                    <fullName>MicroTech II Unit Vent</fullName>
                </value>
                <value>
                    <fullName>MicroTech Integrated System</fullName>
                </value>
                <value>
                    <fullName>MicroTech “E” chiller</fullName>
                </value>
                <value>
                    <fullName>ROC Microtech III</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Curacao</fullName>
                </value>
                <value>
                    <fullName>Dominica</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Grenada</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Guyana</fullName>
                </value>
                <value>
                    <fullName>Haiti</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_Time__c</fullName>
        <description>Created the field for the TRC (Tim Bernard)</description>
        <formula>CreatedDate - Original_Inquiry_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long it took from the case being submitted to created.</inlineHelpText>
        <label>Creation Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Issue__c</fullName>
        <description>Why was “Critical” checked</description>
        <inlineHelpText>Why was “Critical” field checked?</inlineHelpText>
        <label>Critical Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Job_Category__c</fullName>
        <label>Critical Job Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Excessive Time</fullName>
                </value>
                <value>
                    <fullName>Re-occurring Issue</fullName>
                </value>
                <value>
                    <fullName>Exuberant Cost</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Excessive Lead Time</fullName>
                </value>
                <value>
                    <fullName>Bad Publicity</fullName>
                </value>
                <value>
                    <fullName>Major New Product Launch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cases/Jobs that need to be escalated throughout the business</description>
        <inlineHelpText>Cases/Jobs that need to be escalated throughout the business</inlineHelpText>
        <label>Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice__c</fullName>
        <inlineHelpText>What is the customer invoice number that was submitted for approval?</inlineHelpText>
        <label>Customer Invoice #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Parts_Amount_Approved__c</fullName>
        <inlineHelpText>What Daikin Parts Dollar Amounts were approved?</inlineHelpText>
        <label>Daikin Parts Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daikin_Parts_Amount_Requested__c</fullName>
        <inlineHelpText>How much of the warranty request is for Daikin Parts?</inlineHelpText>
        <label>Daikin Parts Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Estimated_Completion__c</fullName>
        <description>Set up for the SLP Rapid Response team</description>
        <inlineHelpText>When is it estimated to be complete?</inlineHelpText>
        <label>Date Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>When was the Warranty Claim Authorization received?</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Set_to_Current_Status__c</fullName>
        <description>Set by the Populate Days of Current Status Workflow Rule</description>
        <label>Date Set to Current Status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Re_Opened__c</fullName>
        <description>Date/Time that case was re-opened (status changed from Closed to Working)</description>
        <inlineHelpText>Date/Time that case was Re-opened (Status changed from Closed to Working)</inlineHelpText>
        <label>Date/Time Re-Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Failure__c</fullName>
        <inlineHelpText>When did the Failure occur or was the issue discovered?</inlineHelpText>
        <label>Date of Failure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>/*Upated 11/2017 by Dan &amp; Cindi If the Record Type is related to the TRC (ATS, AAH or Chillers) it does a calculation on the Reopen Or Original Inquiry Date all others are on the created date*/ 


IF( RecordType.Name = &quot;Service Operations&quot; || RecordType.Name = &quot;Rep Help Desk&quot; || RecordType.Name = &quot;SLP Rapid Response&quot; || RecordType.Name = &quot;Salesforce Help&quot; || RecordType.Name = &quot;Salesforce Help Backlog&quot; || RecordType.Name = &quot;ATS Marketing Cases&quot;, 
(IF(IsClosed, 
(ClosedDate - CreatedDate), ((NOW() - CreatedDate)))), 

IF(RecordType.Name = &quot;TRC - Controls&quot; || RecordType.Name = &quot;TRC - PQR&quot;, 
(IF (IsClosed, 
(ClosedDate - IF(IsBlank(Date_Time_Re_Opened__c), CreatedDate, Date_Time_Re_Opened__c)), ((NOW() - IF(IsBlank(Date_Time_Re_Opened__c), CreatedDate, Date_Time_Re_Opened__c))))),


IF (IsClosed, ClosedDate, NOW()) - IF(IsBlank(Date_Time_Re_Opened__c), IF(IsBlank(Original_Inquiry_Date_Time__c), CreatedDate, Original_Inquiry_Date_Time__c), Date_Time_Re_Opened__c)))

/*Upated by Dan &amp; Cindi If the Record Type is related to the TRC it does a calculation on the Reopen Date all others are on the created date 
IF( RecordType.Name = &quot;Service Operations&quot; || RecordType.Name = &quot;Rep Help Desk&quot; || RecordType.Name = &quot;SLP Rapid Response&quot; || RecordType.Name = &quot;Salesforce Help&quot; || RecordType.Name = &quot;Salesforce Help Backlog&quot;, 
(IF(IsClosed, 
(ClosedDate - CreatedDate), ((NOW() - CreatedDate)))), 
IF (IsClosed, 
(ClosedDate - IF(IsBlank(Date_Time_Re_Opened__c), CreatedDate, Date_Time_Re_Opened__c)), ((NOW() - IF(IsBlank(Date_Time_Re_Opened__c), CreatedDate, Date_Time_Re_Opened__c)))))*/</formula>
        <inlineHelpText>The number of days a Case is open before it is closed.  This is calculated from the Open date or Reopen date depending on business line.</inlineHelpText>
        <label>Days/Hours Open</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Status__c</fullName>
        <formula>NOW()- Date_Set_to_Current_Status__c+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Compressor_Model__c</fullName>
        <label>Defective Compressor Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defective_Compressor_Serial__c</fullName>
        <label>Defective Compressor Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Resolution_Preventative_Action__c</fullName>
        <inlineHelpText>Failure Resolution and Actions taken to prevent re-occurrences</inlineHelpText>
        <label>Failure Resolution &amp; Preventative Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Activity_Date__c</fullName>
        <label>First Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Activity_Date_and_Time__c</fullName>
        <label>First Activity Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF(ISPICKVAL(Priority,&apos;Medium&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0151A000002vP53&quot;,&quot;Yellow&quot;),
IF(ISPICKVAL(Priority,&apos;High&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0151A000002vP51&quot;,&quot;Orange&quot;),
IF(ISPICKVAL(Priority,&apos;Urgent&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0151A000002vP52&quot;,&quot;Red&quot;),
IF(ISPICKVAL(Status,&apos;Working-Contacted&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=0150y0000036SGR&quot;,&quot;Blue&quot;),&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Line_Number__c</fullName>
        <formula>Asset.GO_Line_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Number__c</fullName>
        <formula>Order__r.GO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasBlankClasses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasBlankClasses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Approved__c</fullName>
        <description>The hours amount of labor Daikin will reimburse for Warranty that have been approved. Compare with Hours Requested</description>
        <inlineHelpText>The labor hours that will be reimbursed and have been approved. Compare to Hours Requested on the case ticket</inlineHelpText>
        <label>Hours Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Requested__c</fullName>
        <description>The hours amount of labor that have been requested for Warranty claims. Compare with Hours Approved</description>
        <inlineHelpText>The requested labor hours to fix asset under warranty</inlineHelpText>
        <label>Hours Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <description>Used by the Intelligent Equipment group to link to IE Assets.</description>
        <externalId>true</externalId>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>Created for Warranty</description>
        <inlineHelpText>Amount that is on the Invoice that was received from the requester/customer.</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Created for Warranty</description>
        <inlineHelpText>Date that is on the Invoice that was received from the requester/customer.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Created for Warranty</description>
        <inlineHelpText>Invoice reference number that was received from the requester/customer.</inlineHelpText>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Capitalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Capitalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_dummy_Case_for_creating_New_cases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for creating new cases from case plan assets</description>
        <inlineHelpText>acts as a reference to create new Cases from Case plan assets</inlineHelpText>
        <label>Template for QA Case Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Name_Order__c</fullName>
        <formula>Order__r.Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Job Name for the associated Order</inlineHelpText>
        <label>Job Name (Order)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name_Truncated__c</fullName>
        <description>This was created to use in the subject line for email templaes</description>
        <formula>Left(Order__r.Job_Name__c,50)</formula>
        <inlineHelpText>Displays 50 characters of the Orders Job Name</inlineHelpText>
        <label>Job Name Truncated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <inlineHelpText>What is the Job Name that the case is referencing?</inlineHelpText>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Amount_Approved__c</fullName>
        <inlineHelpText>What Labor Dollar Amounts were approved?</inlineHelpText>
        <label>Labor Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Amount_Requested__c</fullName>
        <inlineHelpText>How much of the warranty request is for Labor?</inlineHelpText>
        <label>Labor Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Asset.Product2.ProductCode</formula>
        <inlineHelpText>Serial Numbers Model</inlineHelpText>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>&quot;Monitoring&quot; should be used when a customer has said they are going to keep an eye on the issue, but we have no further action. This can only be edited on the Close Case Page Layout.</inlineHelpText>
        <label>Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Case_Assets__c</fullName>
        <label># Of Case Assets</label>
        <summaryForeignKey>Case_Asset__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <formula>Number_of_Tasks__c  +   Number_of_Events__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Activities__c</fullName>
        <label>Number of Closed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Events__c</fullName>
        <label>Number of Events</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Activities__c</fullName>
        <label>Number of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity / Project Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to Sales Order for Warranty. Populated via Process Builder when an asset is specified on the case</description>
        <inlineHelpText>The order of the asset specified on this case that is automatically populated when an asset is defined</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Inquiry_Date_Time__c</fullName>
        <description>Date/Time of the original inquiry.  If the case was received via voicemail or email that date/time should be entered here.  Otherwise update with what the date/time is upon creation.</description>
        <inlineHelpText>Date/Time of the original inquiry. (e.g. - Voicemail or Email Date/Time)</inlineHelpText>
        <label>Original Inquiry Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PGM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PGM is assigned by Business Unit on the Header or Claim(Asset)</description>
        <inlineHelpText>Assigned based on the Business Unit on the Header or Claim(Asset)</inlineHelpText>
        <label>PGM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PGM_RGM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated via Process Builder on logic of Type and Business  Unit</description>
        <inlineHelpText>The Approver is the RGM for Sales Concession or Product GM for Warranty. RGM is assigned by Selling Rep Office and PGM is assigned by Business Unit of the asset.</inlineHelpText>
        <label>PGM/RGM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>